--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
  <head>
+	<!-- <bgsound src="music/1.mp3" loop="-1" /> -->
   <title>feel for you</title>
 
   <style>
@@ -20,6 +21,16 @@
  </head>
 
  <body>
+<audio src="music/1.mp3" controls="controls"  autostart="true" loop="true" > </audio>
+	<!-- width="80" height="20" -->
+	<!-- <audio 
+	autoplay="autoplay"
+   	controls="controls"
+  	loop="loop"
+  	preload="auto"
+  	src="music/1.mp3">
+</audio> -->
+
  <canvas id="canvas"></canvas>
  <script>
  var canvas;
