--- a/lovely/page.html
+++ b/lovely/page.html
@@ -71,7 +71,7 @@
 			});
 			
 			var i=0;
-			var str="一个人走得很快，但两个人却可以走得更远。大学四年里，我本着以学业为重，放弃了太多的美好事物，唯独这一次，我不想放弃了。《大话西游》中有句话我记得非常清楚，叫曾经有一份真挚的爱情摆在我的面前我没有珍惜，等到失去的时候才追悔莫及，人世间最痛苦的事莫过于此！假如上天能给我一次再来的机会，我会对那个女孩说三个字，我爱你，假如非要在这份爱上加一个期限，我希望是一万年！我曾无数次幻想过未来的女朋友是什么样的，温柔或体贴，让我没想到的是，唯独你无意间闯入我的生活，而我却对你一点一点的沦陷。宝藏女孩，我想说你就是我今生的追忆，你就是我的无人可替，你是时空深处的意难平。我是一个不善言辞的人，但是我希望用我的一生来书写我们之间各种温馨的画面。宝藏女孩，或许现在的我还不是你的理想型，但我可以学着成为你的理想型，你愿意成为我的那位girlfrind吗？生死契阔，与子成悦；执子之手，与子偕老。";
+			var str="一个人走得很快，但两个人却可以走得更远。大学四年里，我本着以学业为重，放弃了太多的美好事物，唯独这一次，我不想放弃了。《大话西游》中有句话我记得非常清楚，叫曾经有一份真挚的爱情摆在我的面前我没有珍惜，等到失去的时候才追悔莫及，人世间最痛苦的事莫过于此！假如上天能给我一次再来的机会，我会对那个女孩说三个字，我爱你，假如非要在这份爱上加一个期限，我希望是一万年！我曾无数次幻想过未来的女朋友是什么样的，温柔或体贴，让我没想到的是，唯独你无意间闯入我的生活，而我却对你一点一点的沦陷。宝藏女孩，我想说你就是我今生的追忆，你就是我的无人可替，你是时空深处的意难平。我是一个不善言辞的人，但是我希望用我的一生来书写我们之间各种温馨的画面。宝藏女孩，或许现在的我还不是你的理想型，但我可以学着成为你的理想型，你愿意成为我的那位girlfriend吗？生死契阔，与子成悦；执子之手，与子偕老。";
 			
 			window.onload=function typing(){
 				//获取div
